# tailstalk2-backend

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  Revolt.toml  deploy.sh  deploy.test.sh
.github/workflows/: docker-cleanup.yaml  docker.yaml  publish-crates.yml  rust.yaml
.mise/: config.toml
crates/bonfire/: Cargo.toml
crates/bonfire/src/: main.rs  websocket.rs
crates/bonfire/src/events/: impl.rs  state.rs
crates/core/coalesced/: Cargo.toml
crates/core/config/: Cargo.toml  Revolt.toml
crates/core/config/src/: lib.rs
crates/core/database/: Cargo.toml
crates/core/database/src/: lib.rs
crates/core/database/src/amqp/: amqp.rs
crates/core/database/src/drivers/: mod.rs  reference.rs
crates/core/database/src/events/: client.rs
crates/core/database/src/models/: mod.rs
crates/core/database/src/models/account_invites/: model.rs  ops.rs
crates/core/database/src/models/account_invites/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/accounts/: axum.rs  model.rs  ops.rs  rocket.rs  schema.rs
crates/core/database/src/models/accounts/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/admin_migrations/: model.rs
crates/core/database/src/models/admin_migrations/ops/mongodb/: init.rs  scripts.rs
crates/core/database/src/models/audit_logs/: model.rs  ops.rs
crates/core/database/src/models/audit_logs/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/bots/: model.rs
crates/core/database/src/models/channel_webhooks/: model.rs
crates/core/database/src/models/channels/: model.rs  ops.rs
crates/core/database/src/models/channels/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/emojis/: model.rs  unicode_emoji.txt
crates/core/database/src/models/messages/: model.rs  ops.rs
crates/core/database/src/models/messages/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/mfa_tickets/: axum.rs  model.rs  ops.rs  rocket.rs  schema.rs
crates/core/database/src/models/mfa_tickets/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/server_members/: model.rs  ops.rs
crates/core/database/src/models/server_members/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/servers/: model.rs  ops.rs
crates/core/database/src/models/servers/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/sessions/: axum.rs  model.rs  ops.rs  rocket.rs  schema.rs
crates/core/database/src/models/sessions/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/users/: model.rs  ops.rs  rocket.rs
crates/core/database/src/models/users/ops/: mongodb.rs  reference.rs
crates/core/database/src/tasks/: ack.rs  last_message_id.rs  mod.rs  process_embeds.rs
crates/core/database/src/util/: captcha.rs  chunked.rs  email.rs  idempotency.rs  ip.rs  mod.rs  password.rs  shield.rs
crates/core/database/src/util/bridge/: v0.rs
crates/core/database/src/voice/: voice_client.rs
crates/core/database/templates/: deletion.html  deletion.original.html  reset-existing.html  reset-existing.original.html  reset.html  reset.original.html  suspension.html  suspension.original.html  verify.html  verify.original.html
crates/core/files/: Cargo.toml
crates/core/models/: Cargo.toml
crates/core/models/src/v0/: accounts.rs  audit_logs.rs  channels.rs  mfa_tickets.rs  mod.rs  server_members.rs  sessions.rs  users.rs
crates/core/parser/: Cargo.toml
crates/core/permissions/: Cargo.toml
crates/core/permissions/src/: test.rs
crates/core/permissions/src/models/: channel.rs
crates/core/presence/: Cargo.toml
crates/core/presence/src/: lib.rs
crates/core/ratelimits/: Cargo.toml
crates/core/ratelimits/src/: axum.rs  rocket.rs
crates/core/result/: Cargo.toml
crates/core/result/src/: axum.rs  lib.rs  rocket.rs
crates/daemons/crond/: Cargo.toml
crates/daemons/crond/src/: main.rs
crates/daemons/crond/src/tasks/: acks.rs  delete_accounts.rs  file_deletion.rs  mod.rs  prune_dangling_files.rs  prune_members.rs  prune_mfa_tickets.rs
crates/daemons/pushd/: Cargo.toml
crates/daemons/pushd/src/: main.rs
crates/daemons/pushd/src/utils/: consumer.rs  mod.rs
crates/daemons/voice-ingress/: Cargo.toml
crates/daemons/voice-ingress/src/: api.rs
crates/delta/: Cargo.toml
crates/delta/src/: main.rs
crates/delta/src/routes/: mod.rs  root.rs
crates/delta/src/routes/account/: change_email.rs  change_password.rs  confirm_deletion.rs  create_account.rs  delete_account.rs  disable_account.rs  fetch_account.rs  mod.rs  password_reset.rs  resend_verification.rs  send_password_reset.rs  verify_email.rs
crates/delta/src/routes/admin/: auth.rs  mod.rs  reports.rs  stats.rs  users.rs
crates/delta/src/routes/bots/: create.rs  delete.rs  edit.rs  fetch.rs  fetch_owned.rs  fetch_public.rs  invite.rs  mod.rs
crates/delta/src/routes/channels/: channel_ack.rs  channel_edit.rs  (+26 more)
crates/delta/src/util/: audit_log_reason.rs  mod.rs  test.rs
crates/services/autumn/: Cargo.toml  Dockerfile
crates/services/gifbox/: Cargo.toml
crates/services/january/: Cargo.toml  Dockerfile
crates/services/january/src/: main.rs  requests.rs
deploy/: Dockerfile
docs/: docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml
(+104 files in other folders)
